added second section andstarted the third one

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title> LandingPage</title>
 </head>
 <body>
@@ -24,50 +25,44 @@
     <div class="header2">
       <div class="left1">
 
-        <div>This website is awesome</div>
+        <h1>This website is awesome</h1>
         <div>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-        <button>Sign up</button>
+        <button class="signup">Sign up</button>
 
       </div>
 
-      <div class="right">
+      <div class="right1">
         <div>this is a placeholder for an image</div>
       </div>
 
     </div>
   </div>  
 
+  <div class="second-section">
+    <div class="sri">
+      Some random information
+    </div>
+    <div class="buttons">
+      <button class="button1" ></button>
+      <button class="button1" ></button>
+      <button class="button1" ></button>
+      <button class="button1" ></button>
+    </div>
 
-  <style>
-    *{
-      padding:0px;
-      margin: 0px;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-    .first-section{
-      background-color: rgb(25, 25, 61);
-      color: white;
-     
-    }
-    .header{
-      display: flex;
-      align-items: center;
-      justify-content: space-around;
-      margin-bottom: 100px;
-    }
-    .linkedgroup{
-      display: flex;
-      gap: 20px;
-    }
-    .left1{
-      display: flex;
-    }
-    .right{
-      display: flex;
-      flex-direction: row;
-    }
+    <div class="information">
+      <p class="text">this is some subtext under an illustration or image</p>
+      <p class="text">this is some subtext under an illustration or image</p>
+      <p class="text">this is some subtext under an illustration or image</p>
+      <p class="text">this is some subtext under an illustration or image</p>
+    </div>
+  </div>
 
-  </style>
+  <div class="third-section">
+    <div class="quote">This an inspiring quote, or a testimonial from a customer. Mayhe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+    <div class="author">-Thor, God of Thunder</div>
+  </div>
+
+
   
 </body>
 </html>
