Finished the template for the journal will begin adding infromation tomorrow

--- a/index.html
+++ b/index.html
@@ -62,6 +62,14 @@
     <div class="author">-Thor, God of Thunder</div>
   </div>
 
+ <div class="fourth-section">
+  <div class="blue-section"></div>
+ </div>
+
+  <p class="fifth-section">
+    Copyright Ryan Driscoll
+  </p>
+
 
   
 </body>
