--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <div class="first-section">
     <div class="header">
 
-      <h1 class="HeaderLogo">Header Logo</h1>
+      <img src="annoyingdog.webp" alt="annoyingdog" class="HeaderLogo" height="75px"></img>
       <div class="linkedgroup">
-        <a class="linkitems">header link one</a>
-        <a class="linkitems">header link one</a>
-        <a class="linkitems">header link one</a>
+        <a class="linkitems1" >about </a>
+        <a class="linkitems2">shop</a>
+        <a class="linkitems3">contact</a>
       </div> 
 
     </div>
@@ -25,14 +25,14 @@
     <div class="header2">
       <div class="left1">
 
-        <h1>This website is awesome</h1>
-        <div>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-        <button class="signup">Sign up</button>
+        <h1>Annoying Dog</h1>
+        <div>Woof Woof Woof Woof Woof Woof Woof Woof Woof Woof Woof Woof Woof Woof Woof Woof Woof Woof Woof Woof Woof Woof Woof Woof</div>
+        <button class="signup">Bark?</button>
 
       </div>
 
       <div class="right1">
-        <div>this is a placeholder for an image</div>
+        <img src="happydog.avif" height="250px"> </img>
       </div>
 
     </div>
@@ -40,34 +40,43 @@
 
   <div class="second-section">
     <div class="sri">
-      Some random information
+      Pretty Buttons!
     </div>
     <div class="buttons">
-      <button class="button1" ></button>
+      <button class="button1"></button>
       <button class="button1" ></button>
       <button class="button1" ></button>
       <button class="button1" ></button>
     </div>
 
     <div class="information">
-      <p class="text">this is some subtext under an illustration or image</p>
-      <p class="text">this is some subtext under an illustration or image</p>
-      <p class="text">this is some subtext under an illustration or image</p>
-      <p class="text">this is some subtext under an illustration or image</p>
+      <p class="text">these</p>
+      <p class="text">are</p>
+      <p class="text">pretty</p>
+      <p class="text">buttons</p>
     </div>
   </div>
 
   <div class="third-section">
-    <div class="quote">This an inspiring quote, or a testimonial from a customer. Mayhe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
-    <div class="author">-Thor, God of Thunder</div>
+    <div class="quote">“Love your Enemies, for they tell you your Faults.”</div>
+    <div class="author">-Jimmy King</div>
   </div>
 
  <div class="fourth-section">
-  <div class="blue-section"></div>
+  <div class="blue-section">
+    <div class="left2">
+      <div class="h13">Call to action! It's time!</div>
+      <div class="signuptext"> Sign up for our product by clicking that button right over there!</div>
+    </div>
+  <div class="signup2">
+    <button class="signup3">Sign Up</button>
+  </div>
+    </div>
+  </div>
  </div>
 
   <p class="fifth-section">
-    Copyright Ryan Driscoll
+    LandingPage made by Ryan Driscoll
   </p>
 
 
